# haskell-tools-ast

./: .gitignore  .travis.yml  Builtin.hs  DefinedInThis.hs  FindUsages.hs  JumpToDefinition.hs  README.md  appveyor.yml  daily.sh  deploy.sh  haskell-tools-builtin-refactorings.cabal  stack-all.yaml  stack.yaml
demo/: haskell-tools-demo.cabal
demo/Language/Haskell/Tools/: ASTDebug.hs  Demo.hs
demo/Language/Haskell/Tools/ASTDebug/: Instances.hs
demo/src/Language/Haskell/Tools/: Demo.hs
demo/src/Language/Haskell/Tools/ASTDebug/: Instances.hs
demo/test/: Main.hs
examples/Project/source-dir/src/: A.hs
examples/Refactor/InlineBinding/: MultiMatch_res.hs  PatternMatched_res.hs  SimpleMultiMatch_res.hs  WithLocals_res.hs
src/ast/: haskell-tools-ast.cabal
src/ast-gen/: haskell-tools-ast-gen.cabal
src/ast-gen/Language/Haskell/Tools/AST/: ElementTypes.hs  Rewrite.hs
src/ast-ghc/: haskell-tools-ast-fromghc.cabal
src/ast-trf/Language/Haskell/Tools/AnnTrf/: PlaceComments.hs  SourceTemplateHelpers.hs
src/ast/Language/Haskell/Tools/: AST.hs
src/ast/Language/Haskell/Tools/AST/: Ann.hs  Base.hs  Base.hs-boot  Binds.hs  Binds.hs-boot  Decl.hs  Decls.hs  Exprs.hs  Exprs.hs-boot  Helpers.hs  Kinds.hs  Literals.hs  Module.hs  Modules.hs  Modules.hs-boot  Names.hs  Names.hs-boot  Patterns.hs  TH.hs  (+5 more)
src/builtin-refactorings/: haskell-tools-builtin-refactorings.cabal
src/builtin-refactorings/Language/Haskell/Tools/Refactor/: Builtin.hs  Predefined.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Builtin/: AutoCorrect.hs  DefinedInThis.hs  DefinedModuleInfos.hs  DollarApp1.hs  DollarApp2.hs  DollarApp3.hs  ExtractBinding.hs  FindUsages.hs  FloatOut.hs  GetTypeInfo.hs  HelloRefactor.hs  InlineBinding.hs  JumpToDefinition.hs  JumpToDefinition.hsFindUsages.hs  OrganizeExtensions.hs  OrganizeImports.hs  RenameDefinition.hs  Scope.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Builtin/ExtensionOrganizer/: .gitignore  ExtMonad.hs  TODO  TraverseAST.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Builtin/ExtensionOrganizer/Checkers/: BangPatternsChecker.hs  DerivingsChecker.hs  FlexibleInstancesChecker.hs  LambdaCaseChecker.hs  MagicHashChecker.hs  PatternSynonymsChecker.hs  RecordWildCardsChecker.hs  TemplateHaskellChecker.hs  TupleSectionsChecker.hs  UnboxedTuplesChecker.hs  ViewPatternsChecker.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Builtin/ExtensionOrganizer/Utils/: SupportedExtensions.hs  TypeLookup.hs
src/builtin-refactorings/Language/Haskell/Tools/Refactor/Predefined/: DataToNewtype.hs  DollarApp.hs  ExtractBinding.hs  FloatOut.hs  GenerateExports.hs  GenerateTypeSignature.hs  IfToGuards.hs  InlineBinding.hs  OrganizeImports.hs  RenameDefinition.hs
src/builtin-refactorings/examples/Module/: Export.hs
src/builtin-refactorings/test/: Main.hs
src/builtin-refactorings/test/ExtensionOrganizerTest/: AnnotationParser.hs  Main.hs
src/builtin-refactorings/test/ExtensionOrganizerTest/DerivingsTest/: DataDeriving.hs  Definitions.hs  NewtypeDeriving.hs  StandaloneData.hs  StandaloneDataSynonyms.hs  StandaloneNewtype.hs  StandaloneNewtypeSynonyms.hs  StandaloneNewtypeSynonymsStrategies.hs
src/builtin-refactorings/test/ExtensionOrganizerTest/FlexibleInstancesTest/: NestedTypes.hs
src/cli/: haskell-tools-cli.cabal
src/cli/bench-tests/: full-1.txt
src/cli/benchmark/: Main.hs
src/cli/exe/: Main.hs
src/cli/self-test/: Main.hs
src/cli/test/: Main.hs
src/cli/test-hackage/: Main.hs
src/cli/test-stackage/: Main.hs
src/daemon/: Main.hs  haskell-tools-daemon.cabal
src/daemon/Language/Haskell/Tools/: Daemon.hs
src/daemon/Language/Haskell/Tools/Daemon/: ErrorHandling.hs  GetModules.hs  Mode.hs  ModuleGraph.hs  Options.hs  PackageDB.hs  Protocol.hs  Representation.hs  Session.hs  State.hs  Update.hs  Utils.hs  Watch.hs
src/daemon/Language/Haskell/Tools/Refactor/: Daemon.hs  GetModules.hs  ModuleGraph.hs  Session.hs
src/daemon/Language/Haskell/Tools/Refactor/Daemon/: PackageDB.hs  Protocol.hs  State.hs  Update.hs  Watch.hs
src/daemon/exe/: Main.hs
src/daemon/test/: Main.hs  StabilityTests.hs
src/debug/: haskell-tools-debug.cabal
src/debug/Language/Haskell/Tools/: Debug.hs  DebugGhcAST.hs  RangeDebug.hs
src/experimental-refactorings/: haskell-tools-experimental-refactorings.cabal
src/experimental-refactorings/test/: Main.hs
src/prettyprint/: haskell-tools-prettyprint.cabal
src/prettyprint/Language/Haskell/Tools/: IndentationUtils.hs  PrettyPrint.hs  Transform.hs
src/refactor/: haskell-tools-refactor.cabal
src/refactor/Language/Haskell/Tools/: Refactor.hs
src/refactor/benchmark/: Main.hs
src/refactor/examples/CPP/: ConditionalImport.hs  ConditionalImport_res.hs
src/refactor/examples/Decl/: ClassInfix.hs
src/refactor/examples/Expr/: ImplicitParamsOrder.hs
src/refactor/examples/Refactor/OrganizeImports/: Removed.hs  Removed_res.hs  ReorderComment.hs  ReorderComment_res.hs  ReorderGroups.hs  ReorderGroups_res.hs
src/refactor/examples/TH/: Logger.hs
src/refactor/examples/TH/Splice/: UseImported.hs
src/refactor/test/: Main.hs
src/rewrite/: haskell-tools-ast-gen.cabal  haskell-tools-rewrite.cabal
src/rewrite/Language/Haskell/Tools/: Rewrite.hs
src/rewrite/test/: Main.hs
src/session/: haskell-tools-session.cabal
src/session/test/: Main.hs
test/: Main.hs  haskell-tools-test.cabal
test/require/: haskell-tools-require.cabal
(+165 files in other folders)
