name:                haskell-tools-builtin-refactorings
version:             0.8.0.0
synopsis:            Refactoring Tool for Haskell
description:         Contains a set of refactorings based on the Haskell-Tools framework to easily transform a Haskell program. For the descriptions of the implemented refactorings, see the homepage.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options: -O2
  exposed-modules:     Language.Haskell.Tools.Refactor.Predefined.GenerateTypeSignature
                     , Language.Haskell.Tools.Refactor.Predefined.OrganizeImports
                     , Language.Haskell.Tools.Refactor.Predefined.GenerateExports
                     , Language.Haskell.Tools.Refactor.Predefined.RenameDefinition
                     , Language.Haskell.Tools.Refactor.Predefined.ExtractBinding
                     , Language.Haskell.Tools.Refactor.Predefined.DataToNewtype
                     , Language.Haskell.Tools.Refactor.Predefined.IfToGuards
                     , Language.Haskell.Tools.Refactor.Predefined.DollarApp
                     , Language.Haskell.Tools.Refactor.Predefined.InlineBinding
                     , Language.Haskell.Tools.Refactor.Predefined.FloatOut
                     , Language.Haskell.Tools.Refactor.Predefined.HelloRefactor
                     , Language.Haskell.Tools.Refactor.Predefined.DollarApp1
                     , Language.Haskell.Tools.Refactor.Predefined.DollarApp2
                     , Language.Haskell.Tools.Refactor.Predefined.DollarApp3

  build-depends:       base                      >= 4.9  && < 4.10
                     , mtl                       >= 2.2  && < 2.3
                     , uniplate                  >= 1.6  && < 1.7
                     , ghc-paths                 >= 0.1  && < 0.2
                     , containers                >= 0.5  && < 0.6
                     , directory                 >= 1.2  && < 1.4
                     , transformers              >= 0.5  && < 0.6
                     , references                >= 0.3  && < 0.4
                     , split                     >= 0.2  && < 0.3
                     , filepath                  >= 1.4  && < 1.5
                     , template-haskell          >= 2.11 && < 2.12
                     , ghc                       >= 8.0  && < 8.1
                     , Cabal                     >= 1.24 && < 1.25
                     , haskell-tools-ast         >= 0.8  && < 0.9
                     , haskell-tools-backend-ghc >= 0.8  && < 0.9
                     , haskell-tools-rewrite     >= 0.8  && < 0.9
                     , haskell-tools-prettyprint >= 0.8  && < 0.9
                     , haskell-tools-refactor    >= 0.8  && < 0.9
  default-language:    Haskell2010
