name:                haskell-tools-daemon
version:             0.2.0.0
synopsis:            Background process for Haskell-tools refactor that editors can connect to.
description:         Background process for Haskell-tools refactor that editors can connect to.
homepage:            https://github.com/haskell-tools/haskell-tools
license:             BSD3
license-file:        LICENSE
author:              Boldizsar Nemeth
maintainer:          nboldi@elte.hu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base                      >=4.9 && <5.0
                     , containers                >=0.5 && <0.6
                     , mtl                       >=2.2 && <2.3
                     , split                     >=0.2 && <1.0
                     , directory                 >=1.2 && <1.3
                     , ghc                       >=8.0 && <8.1
                     , ghc-paths                 >=0.1 && <0.2
                     , references                >=0.3.2 && <1.0
                     , haskell-tools-ast         >=0.2 && <0.3
                     , haskell-tools-prettyprint >=0.2 && <0.3
                     , haskell-tools-refactor    >=0.2 && <0.3
  exposed-modules:     Language.Haskell.Tools.Refactor.Daemon
  default-language:    Haskell2010


executable ht-refact
  build-depends:       base                      >=4.9 && <5.0
                     , containers                >=0.5 && <0.6
                     , mtl                       >=2.2 && <2.3
                     , split                     >=0.2 && <1.0
                     , directory                 >=1.2 && <1.3
                     , ghc                       >=8.0 && <8.1
                     , ghc-paths                 >=0.1 && <0.2
                     , references                >=0.3.2 && <1.0
                     , haskell-tools-ast         >=0.2 && <0.3
                     , haskell-tools-prettyprint >=0.2 && <0.3
                     , haskell-tools-refactor    >=0.2 && <0.3
                     , haskell-tools-daemon      >=0.2 && <0.3
  main-is:             Main.hs
  default-language:    Haskell2010
